Fix loading screen alignment

--- a/src/components/LoadingScreen/styles.scss
+++ b/src/components/LoadingScreen/styles.scss
@@ -2,12 +2,10 @@
 
 .loading-screen {
   position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-content: center;
   height: 100vh;
-  width: 100vw;
+  width: 375px;
   background-color: $light-color;
   z-index: 9999;
   animation: fadeOut 1.5s ease-out;
